--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Git Action 테스트 첫번째</h1>
 <h2 style="color:blue;">Git Action 테스트 두번째</h2>
+<h2 style="color:#fff;background-color:red;">Git Action 테스트 세번째</h2>
 </body>
 </html>
